Details
-
Bug
-
Resolution: Fixed
-
Critical
-
5.0.0
-
None
-
Untriaged
-
Unknown
Description
A couple of days ago we started seeing build-sanity failures on Centos7 only (MB-20215 and MB-20216). This was strange because
- it passed on other platforms and
- same tests passed when QE ran them.
I was really not sure what was causing this, when Wayne mentioned yesterday that the machine that is hosting a bunch of build sanity VMs were consistently running at 100% CPU. This led me to investigate this a little further and it turns out that while running build 904 (or greater)the memcached process gets to 350-380% of CPU. And pretty much stays that way for the entirety of test suite.
I ran this multiple times on both centos and ubuntu (builds 903 vs 904) and was able to see memcached going crazy with build 904.
Changelog for build 904: http://172.23.120.24/builds/latestbuilds/couchbase-server/spock/904/CHANGELOG
Attachments
Issue Links
- relates to
-
MB-20286 DCP observe regression between 4.5.1 build 2727 and 2756
-
- Closed
-
For Gerrit Dashboard: MB-20235 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
66147,2 | MB-20235: Fix wake's incorrect work counting | master | ep-engine | Status: MERGED | +2 | +1 |