MB-20235: Fix wake's incorrect work counting

MB-20061 introduced a better futureQueue object but has
introduced a ExecutorPool work accounting bug. The work
counter should only be increased for tasks in the readyQueue,
MB-20061 would sometimes add 1 for items in the futureQueue.
The counter would then never reach 0 and the fetchNextTask loop
would never yield (causing high CPU).

Note that when MB-18453 is merged up from sherlock, this code
will be tweaked again to remove any readyQueue push code
from the wake path.

Change-Id: I010de48666fc5327bd2f5912f10dad7177ec5a37
Reviewed-on: http://review.couchbase.org/66147
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Will Gardner <will.gardner@couchbase.com>
Reviewed-by: Manu Dhundi <manu@couchbase.com>